обернул все микросервисы в docker контрейнеры через docker compose